[package]
name = "asset_storage_rs"
version = "0.1.0"
authors = ["Hans Larsen <hans@larsen.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.1.1"
ic-cdk-macros = "0.1.1"
candid = "0.6.11"
ic-types = "0.1.1"
serde = "1.0.111"
uuid = { version = "0.8", features = ["v3", "wasm-bindgen"] }
